# app/serializers/movie_serializer.rb
@@ -43,10 +43,6 @@ class MovieSerializer
     movie[:status] || movie["status"]
   end
 
-  attribute :progress_notes do |movie|
-    movie[:progress_notes] || movie["progress_notes"]
-  end
-
   attribute :rating do |movie|
     movie[:rating] || movie["rating"]
   end
