# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[8.1].define(version: 2026_01_25_225835) do
+ActiveRecord::Schema[8.1].define(version: 2026_02_03_191037) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "pg_catalog.plpgsql"
 
@@ -50,7 +50,6 @@ ActiveRecord::Schema[8.1].define(version: 2026_01_25_225835) do
     t.datetime "created_at", null: false
     t.bigint "movie_id", null: false
     t.text "notes"
-    t.text "progress_notes"
     t.integer "rating"
     t.integer "status", default: 0, null: false
     t.datetime "updated_at", null: false
